
[TestRealWorldSymbolInterface - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.InterfaceDecl{
            Name: &dts_parser.Ident{
                Name: "Symbol",
                span: 10-16,
            },
            Members: []dts_parser.InterfaceMember{
                &dts_parser.MethodSignature{
                    Name: &dts_parser.Ident{
                        Name: "toString",
                        span: 80-88,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 92-98,
                    },
                    doc: "/** Returns a string representation of an object. */",
                    span: 80-98,
                },
                &dts_parser.MethodSignature{
                    Name: &dts_parser.Ident{
                        Name: "valueOf",
                        span: 169-176,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 10,
                        span: 180-186,
                    },
                    doc: "/** Returns the primitive value of the specified object. */",
                    span: 169-186,
                },
            },
            span: 0-189,
        },
    },
}
---

[TestCommentsInObjectTypes/single_line_comment_before_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 5-8,
            },
            TypeAnn: &dts_parser.ObjectType{
                Members: []dts_parser.InterfaceMember{
                    &dts_parser.PropertySignature{
                        Name: &dts_parser.Ident{
                            Name: "prop",
                            span: 24-28,
                        },
                        TypeAnn: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 30-36,
                        },
                        doc: "/** doc */",
                        span: 24-36,
                    },
                },
                span: 11-38,
            },
            span: 0-38,
        },
    },
}
---

[TestCommentsInObjectTypes/block_comment_before_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 5-8,
            },
            TypeAnn: &dts_parser.ObjectType{
                Members: []dts_parser.InterfaceMember{
                    &dts_parser.PropertySignature{
                        Name: &dts_parser.Ident{
                            Name: "prop",
                            span: 27-31,
                        },
                        TypeAnn: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 33-39,
                        },
                        span: 27-39,
                    },
                },
                span: 11-41,
            },
            span: 0-41,
        },
    },
}
---

[TestCommentsInObjectTypes/multiple_comments_before_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 5-8,
            },
            TypeAnn: &dts_parser.ObjectType{
                Members: []dts_parser.InterfaceMember{
                    &dts_parser.PropertySignature{
                        Name: &dts_parser.Ident{
                            Name: "prop",
                            span: 37-41,
                        },
                        TypeAnn: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 43-49,
                        },
                        span: 37-49,
                    },
                },
                span: 11-51,
            },
            span: 0-51,
        },
    },
}
---

[TestCommentsInObjectTypes/comments_between_properties - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 5-8,
            },
            TypeAnn: &dts_parser.ObjectType{
                Members: []dts_parser.InterfaceMember{
                    &dts_parser.PropertySignature{
                        Name: &dts_parser.Ident{
                            Name: "a",
                            span: 13-14,
                        },
                        TypeAnn: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 16-22,
                        },
                        span: 13-22,
                    },
                    &dts_parser.PropertySignature{
                        Name: &dts_parser.Ident{
                            Name: "b",
                            span: 41-42,
                        },
                        TypeAnn: &dts_parser.PrimitiveType{
                            Kind: 7,
                            span: 44-50,
                        },
                        doc: "/** doc for b */",
                        span: 41-50,
                    },
                },
                span: 11-52,
            },
            span: 0-52,
        },
    },
}
---

[TestCommentsInObjectTypes/comment_after_separator - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 5-8,
            },
            TypeAnn: &dts_parser.ObjectType{
                Members: []dts_parser.InterfaceMember{
                    &dts_parser.PropertySignature{
                        Name: &dts_parser.Ident{
                            Name: "a",
                            span: 13-14,
                        },
                        TypeAnn: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 16-22,
                        },
                        span: 13-22,
                    },
                    &dts_parser.PropertySignature{
                        Name: &dts_parser.Ident{
                            Name: "b",
                            span: 35-36,
                        },
                        TypeAnn: &dts_parser.PrimitiveType{
                            Kind: 7,
                            span: 38-44,
                        },
                        doc: "/** doc */",
                        span: 35-44,
                    },
                },
                span: 11-46,
            },
            span: 0-46,
        },
    },
}
---

[TestCommentsInObjectTypes/multi-line_JSDoc_comment - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 5-8,
            },
            TypeAnn: &dts_parser.ObjectType{
                Members: []dts_parser.InterfaceMember{
                    &dts_parser.PropertySignature{
                        Name: &dts_parser.Ident{
                            Name: "prop",
                            span: 92-96,
                        },
                        TypeAnn: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 98-104,
                        },
                        doc: "/**\n     * This is a property\n     * with a multi-line comment\n     */",
                        span: 92-104,
                    },
                },
                span: 11-107,
            },
            span: 0-107,
        },
    },
}
---

[TestCommentsInObjectTypes/comments_before_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 5-8,
            },
            TypeAnn: &dts_parser.ObjectType{
                Members: []dts_parser.InterfaceMember{
                    &dts_parser.MethodSignature{
                        Name: &dts_parser.Ident{
                            Name: "getValue",
                            span: 31-39,
                        },
                        ReturnType: &dts_parser.PrimitiveType{
                            Kind: 7,
                            span: 43-49,
                        },
                        doc: "/** Gets value */",
                        span: 31-49,
                    },
                },
                span: 11-51,
            },
            span: 0-51,
        },
    },
}
---

[TestCommentsInObjectTypes/comments_before_index_signature - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 5-8,
            },
            TypeAnn: &dts_parser.ObjectType{
                Members: []dts_parser.InterfaceMember{
                    &dts_parser.IndexSignature{
                        KeyName: &dts_parser.Ident{
                            Name: "key",
                            span: 31-34,
                        },
                        KeyType: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 36-42,
                        },
                        ValueType: &dts_parser.PrimitiveType{
                            span: 45-48,
                        },
                        doc: "/** Index sig */",
                        span: 30-48,
                    },
                },
                span: 11-50,
            },
            span: 0-50,
        },
    },
}
---

[TestInlineCommentsInConditionalTypes/inline_comment_after_question_mark - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 5-8,
            },
            TypeParams: []*dts_parser.TypeParam{
                &dts_parser.TypeParam{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 9-10,
                    },
                    span: 9-10,
                },
            },
            TypeAnn: &dts_parser.ConditionalType{
                CheckType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 14-15,
                    },
                    span: 14-15,
                },
                ExtendsType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 24-30,
                },
                TrueType: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 47-53,
                },
                FalseType: &dts_parser.PrimitiveType{
                    Kind: 8,
                    span: 56-63,
                },
                span: 14-63,
            },
            span: 0-63,
        },
    },
}
---

[TestInlineCommentsInConditionalTypes/inline_comment_after_colon - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 5-8,
            },
            TypeParams: []*dts_parser.TypeParam{
                &dts_parser.TypeParam{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 9-10,
                    },
                    span: 9-10,
                },
            },
            TypeAnn: &dts_parser.ConditionalType{
                CheckType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 14-15,
                    },
                    span: 14-15,
                },
                ExtendsType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 24-30,
                },
                TrueType: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 33-39,
                },
                FalseType: &dts_parser.PrimitiveType{
                    Kind: 8,
                    span: 56-63,
                },
                span: 14-63,
            },
            span: 0-63,
        },
    },
}
---

[TestInlineCommentsInConditionalTypes/inline_comments_after_both - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 5-8,
            },
            TypeParams: []*dts_parser.TypeParam{
                &dts_parser.TypeParam{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 9-10,
                    },
                    span: 9-10,
                },
            },
            TypeAnn: &dts_parser.ConditionalType{
                CheckType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 14-15,
                    },
                    span: 14-15,
                },
                ExtendsType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 24-30,
                },
                TrueType: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 44-50,
                },
                FalseType: &dts_parser.PrimitiveType{
                    Kind: 8,
                    span: 65-72,
                },
                span: 14-72,
            },
            span: 0-72,
        },
    },
}
---

[TestInlineCommentsInConditionalTypes/line_comment_after_question_mark - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 5-8,
            },
            TypeParams: []*dts_parser.TypeParam{
                &dts_parser.TypeParam{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 9-10,
                    },
                    span: 9-10,
                },
            },
            TypeAnn: &dts_parser.ConditionalType{
                CheckType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 14-15,
                    },
                    span: 14-15,
                },
                ExtendsType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 24-30,
                },
                TrueType: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 48-54,
                },
                FalseType: &dts_parser.PrimitiveType{
                    Kind: 8,
                    span: 57-64,
                },
                span: 14-64,
            },
            span: 0-64,
        },
    },
}
---

[TestInlineCommentsInConditionalTypes/line_comment_after_colon - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 5-8,
            },
            TypeParams: []*dts_parser.TypeParam{
                &dts_parser.TypeParam{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 9-10,
                    },
                    span: 9-10,
                },
            },
            TypeAnn: &dts_parser.ConditionalType{
                CheckType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 14-15,
                    },
                    span: 14-15,
                },
                ExtendsType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 24-30,
                },
                TrueType: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 33-39,
                },
                FalseType: &dts_parser.PrimitiveType{
                    Kind: 8,
                    span: 57-64,
                },
                span: 14-64,
            },
            span: 0-64,
        },
    },
}
---

[TestInlineCommentsInConditionalTypes/simplified_Awaited_type - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Awaited",
                span: 5-12,
            },
            TypeParams: []*dts_parser.TypeParam{
                &dts_parser.TypeParam{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 13-14,
                    },
                    span: 13-14,
                },
            },
            TypeAnn: &dts_parser.ConditionalType{
                CheckType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 18-19,
                    },
                    span: 18-19,
                },
                ExtendsType: &dts_parser.UnionType{
                    Types: []dts_parser.TypeAnn{
                        &dts_parser.PrimitiveType{
                            Kind: 3,
                            span: 28-32,
                        },
                        &dts_parser.PrimitiveType{
                            Kind: 4,
                            span: 35-44,
                        },
                    },
                    span: 28-44,
                },
                TrueType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 47-48,
                    },
                    span: 47-48,
                },
                FalseType: &dts_parser.ConditionalType{
                    CheckType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "T",
                            span: 71-72,
                        },
                        span: 71-72,
                    },
                    ExtendsType: &dts_parser.PrimitiveType{
                        Kind: 12,
                        span: 81-87,
                    },
                    TrueType: &dts_parser.PrimitiveType{
                        Kind: 5,
                        span: 90-95,
                    },
                    FalseType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "T",
                            span: 120-121,
                        },
                        span: 120-121,
                    },
                    span: 71-121,
                },
                span: 18-121,
            },
            span: 0-121,
        },
    },
}
---

[TestInlineCommentsInConditionalTypes/full_Awaited-like_type - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Awaited",
                span: 5-12,
            },
            TypeParams: []*dts_parser.TypeParam{
                &dts_parser.TypeParam{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 13-14,
                    },
                    span: 13-14,
                },
            },
            TypeAnn: &dts_parser.ConditionalType{
                CheckType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 18-19,
                    },
                    span: 18-19,
                },
                ExtendsType: &dts_parser.UnionType{
                    Types: []dts_parser.TypeAnn{
                        &dts_parser.PrimitiveType{
                            Kind: 3,
                            span: 28-32,
                        },
                        &dts_parser.PrimitiveType{
                            Kind: 4,
                            span: 35-44,
                        },
                    },
                    span: 28-44,
                },
                TrueType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 47-48,
                    },
                    span: 47-48,
                },
                FalseType: &dts_parser.ConditionalType{
                    CheckType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "T",
                            span: 92-93,
                        },
                        span: 92-93,
                    },
                    ExtendsType: &dts_parser.IntersectionType{
                        Types: []dts_parser.TypeAnn{
                            &dts_parser.PrimitiveType{
                                Kind: 12,
                                span: 102-108,
                            },
                            &dts_parser.ObjectType{
                                Members: []dts_parser.InterfaceMember{
                                    &dts_parser.MethodSignature{
                                        Name: &dts_parser.Ident{
                                            Name: "then",
                                            span: 113-117,
                                        },
                                        Params: []*dts_parser.Param{
                                            &dts_parser.Param{
                                                Name: &dts_parser.Ident{
                                                    Name: "onfulfilled",
                                                    span: 118-129,
                                                },
                                                Type: &dts_parser.InferType{
                                                    TypeParam: &dts_parser.TypeParam{
                                                        Name: &dts_parser.Ident{
                                                            Name: "F",
                                                            span: 137-138,
                                                        },
                                                        span: 131-138,
                                                    },
                                                    span: 131-138,
                                                },
                                                span: 118-138,
                                            },
                                        },
                                        ReturnType: &dts_parser.PrimitiveType{
                                            span: 141-144,
                                        },
                                        span: 113-144,
                                    },
                                },
                                span: 111-147,
                            },
                        },
                        span: 102-147,
                    },
                    TrueType: &dts_parser.ConditionalType{
                        CheckType: &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "F",
                                span: 193-194,
                            },
                            span: 193-194,
                        },
                        ExtendsType: &dts_parser.ParenthesizedType{
                            Type: &dts_parser.FunctionType{
                                Params: []*dts_parser.Param{
                                    &dts_parser.Param{
                                        Name: &dts_parser.Ident{
                                            Name: "value",
                                            span: 205-210,
                                        },
                                        Type: &dts_parser.InferType{
                                            TypeParam: &dts_parser.TypeParam{
                                                Name: &dts_parser.Ident{
                                                    Name: "V",
                                                    span: 218-219,
                                                },
                                                span: 212-219,
                                            },
                                            span: 212-219,
                                        },
                                        span: 205-219,
                                    },
                                },
                                ReturnType: &dts_parser.PrimitiveType{
                                    span: 224-227,
                                },
                                span: 204-227,
                            },
                            span: 203-228,
                        },
                        TrueType: &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "Awaited",
                                span: 282-289,
                            },
                            TypeArgs: []dts_parser.TypeAnn{
                                &dts_parser.TypeReference{
                                    Name: &dts_parser.Ident{
                                        Name: "V",
                                        span: 290-291,
                                    },
                                    span: 290-291,
                                },
                            },
                            span: 282-292,
                        },
                        FalseType: &dts_parser.PrimitiveType{
                            Kind: 5,
                            span: 335-340,
                        },
                        span: 193-340,
                    },
                    FalseType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "T",
                            span: 388-389,
                        },
                        span: 388-389,
                    },
                    span: 92-389,
                },
                span: 18-389,
            },
            span: 0-390,
        },
    },
}
---
